panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__enum__test_error_type_error_with_enumerator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/enum/test_error_type_error_with_enumerator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/enum/test_error_type_error_with_enumerator.c"
   (enum E~0
      (enumerators ∅
         (enumerator A~1 `enum E~0`.0 ∅)
         (enumerator B~2 `enum E~0`.1 ∅)
         (enumerator C~3 `enum E~0`.2 ∅)))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (expression (less nullptr (enumerator A~1 `enum E~0 complete`.0 ∅))))))

----- stderr -----
